*Rails 3.0.0 [beta 4/release candidate] (unreleased)*

* Ruby 1.9: support UTF-8 case folding.  #4595 [Norman Clarke]

* Renames Array#rand -> Array#random_element. [Santiago Pastorino, Rizwan Reza]

* Ruby 1.9: Renames last_(month|year) to prev_(month|year) in Date and Time. [fxn]

* Aliases Date#sunday to Date#end_of_week. [fxn]

* Backports Date#>> from 1.9 so that calculations do the right thing around the calendar reform. [fxn]

* Date#to_time handles properly years in the range 0..138. [fxn]

* Deprecate {{}} as interpolation syntax for I18n in favor of %{} [José Valim]

* Array#to_xml is more powerful and able to handle the same types as Hash#to_xml #4490 [Neeraj Singh]

* Harmonize the caching API and refactor the backends.  #4452 [Brian Durand]
  All caches:
  * Add default options to initializer that will be sent to all read, write, fetch, exist?, increment, and decrement
  * Add support for the :expires_in option to fetch and write for all caches. Cache entries are stored with the create timestamp and a ttl so that expiration can be handled independently of the implementation.
  * Add support for a :namespace option. This can be used to set a global prefix for cache entries.
  * Deprecate expand_cache_key on ActiveSupport::Cache and move it to ActionController::Caching and ActionDispatch::Http::Cache since the logic in the method used some Rails specific environment variables and was only used by ActionPack classes. Not very DRY but there didn't seem to be a good shared spot and ActiveSupport really shouldn't be Rails specific.
  * Add support for :race_condition_ttl to fetch. This setting can prevent race conditions on fetch calls where several processes try to regenerate a recently expired entry at once.
  * Add support for :compress option to fetch and write which will compress any data over a configurable threshold.
  * Nil values can now be stored in the cache and are distinct from cache misses for fetch.