@@ -1,3 +1,5 @@
+require 'active_support/core_ext/string/multibyte'
+
 class String
   # Returns the string, first removing all whitespace on both ends of
   # the string, and then changing remaining consecutive whitespace
@@ -16,5 +18,36 @@ class String
     strip!
     gsub!(/\s+/, ' ')
     self
+  end
+
+  # Truncates a given +text+ after a given <tt>length</tt> if +text+ is longer than <tt>length</tt>.
+  # The last characters will be replaced with the <tt>:omission</tt> (defaults to "...")
+  # for a total length not exceeding <tt>:length</tt>.
+  #
+  # Pass a <tt>:separator</tt> to truncate +text+ at a natural break.
+  #
+  # ==== Examples
+  #
+  #   "Once upon a time in a world far far away".truncate(30)
+  #   # => Once upon a time in a worl...
+  #
+  #   "Once upon a time in a world far far away".truncate(30, :separator => ' ')
+  #   # => Once upon a time in a world...
+  #
+  #   "Once upon a time in a world far far away".truncate(14)
+  #   # => Once upon a...
+  #
+  #   "And they found that many people were sleeping better.".truncate(25, :omission => "... (continued)")
+  #   # => And they f... (continued)
+  def truncate(length, options = {})
+    text = self.dup
+    options[:omission] ||= "..."
+
+    length_with_room_for_omission = length - options[:omission].mb_chars.length
+    chars = text.mb_chars
+    stop = options[:separator] ?
+      (chars.rindex(options[:separator].mb_chars, length_with_room_for_omission) || length_with_room_for_omission) : length_with_room_for_omission
+
+    (chars.length > length ? chars[0...stop] + options[:omission] : text).to_s
   end
 end
